<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BeginnerStringSelectionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_learn_all_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_learn_all_notes"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_e_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="StudyGuitarStringE"
            android:text="@string/btn_e_string"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_learn_all_notes" />

        <Button
            android:id="@+id/btn_a_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="StudyGuitarStringA"
            android:text="@string/btn_a_string"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_e_string" />

        <Button
            android:id="@+id/btn_d_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="StudyGuitarStringD"
            android:text="@string/btn_d_string"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_a_string" />

        <Button
            android:id="@+id/btn_g_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="StudyGuitarStringG"
            android:text="@string/btn_g_string"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_d_string" />

        <Button
            android:id="@+id/btn_b_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="StudyGuitarStringB"
            android:text="@string/btn_b_string"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_g_string" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>